# coding-challenges

./: .gitignore  README.md
01 - build a wc tool/: IMPLEMENTATION_NOTES.md  USAGE.md  ccwc.cpp  sample_test.txt
02 - build your json parser/: README.md  implementation.md  main.cpp  parser_overview.md  persers_overview.md  python_implementation.md
02 - build your json parser/c++/: build.sh  json_parser.hpp  lexer.cpp  main.cpp  parser.cpp
02 - build your json parser/python/: Lexer.py  Parser.py  debug.py  main.py
03 - compression tool/: README.md  code-dive-conference-2014-scott-meyers.md
03 - compression tool/python/: check_diff.py  file-compressor.py  test_compressed.huf
15 - shell/python/: implementation.md  pyproject.toml  usage.md
15 - shell/python/src/ccsh/: command_helpers.py  main.py
15 - shell/python/src/tests/: test_shell.py
