[project]
name = "ccsh"
version = "0.0.1"
authors = [{ name = "Kaman", email = "kskaman@gmail.com" }]
description = "A simple shell implementation in Python."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
ccsh = "ccsh.main:ccsh"

[project.urls]
"Homepage" = "https://codingchallenges.fyi/challenges/challenge-shell"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
